# mysite

./: manage.py  pyproject.toml  render.yaml  requirements.txt
render/: views.py
render/templates/render/: index.html
tuttofare/: asgi.py  settings.py  urls.py  wsgi.py
